--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,6 +112,11 @@ nav:
       - 古语残留助动词「べし」: modern/chapter4/section15.md
       - 古语残留助动词「まい」: modern/chapter4/section16.md
       - 日语的语体: modern/chapter4/section17.md
+    - 助词接续与用法:
+      - 日语格助词用法: modern/chapter5/section1.md
+      - 日语接续助词用法: modern/chapter5/section2.md
+      - 日语副助词用法:
+        - modern/chapter5/section3/index.md
   - 古代日语自学:
     - 历史假名遣: ancient/chapter1.md
   - 汉文自学:
